<resources>

    <string-array name="role_arrays">
        <item>Admin</item>
        <item>Employee</item>
        <item>Customer</item>
    </string-array>

    <string name="app_name">CSCB07 App</string>
    <string name="login_menu_id_hint">User Id</string>
    <string name="login_menu_password_hint">Password</string>
    <string name="login_menu_login_prompt">Login</string>
    <string name="admin_promote_hint">Employee Id</string>
    <string name="admin_promote_prompt">Promote Employee:</string>
    <string name="admin_promote_btn">Promote Employee</string>
    <string name="admin_add_item_prompt">Add Item:</string>
    <string name="admin_add_item_hint">Item Id</string>
    <string name="admin_add_item_btn">Add Item</string>
    <string name="admin_view_sales_btn">View Sales</string>
    <string name="employee_menu_authenticate_new_employee_btn">Authenticate New Employee</string>
    <string name="employee_menu_make_new_user_btn">Make New User</string>
    <string name="employee_menu_make_new_account_btn">Make New Account</string>
    <string name="employee_menu_make_user_btn">Make New User</string>
    <string name="employee_menu_make_employee_btn">Make New Employee</string>
    <string name="employee_menu_make_restock_inventory_btn">Restock Inventory</string>
    <string name="exit_btn">Exit</string>
    <string name="employee_menu_options">Please Choose An Option</string>
    <string name="back_btn">Go Back</string>
    <string name="employee_authenticate_employee_hint">Employee Id</string>
    <string name="employee_authenticate_btn">Authenticate</string>
    <string name="create_user_name_hint">Full Name</string>
    <string name="create_user_age_hint">Age</string>
    <string name="create_user_address_hint">Address</string>
    <string name="create_user_btn">Create User</string>
    <string name="create_customer_btn">Create Customer</string>
    <string name="restock_inventory_item_id_hint">Item Id</string>
    <string name="restock_inventory_quantity_hint">Quantity</string>
    <string name="restock_inventory_btn">Restock Inventory</string>
    <string name="make_account_user_id_hint">Customer Id</string>
    <string name="make_account_btn">Make Account</string>
    <string name="login_role_name_prompt">Role Name</string>
</resources>
