<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeMakeEmployee"
    android:padding="@dimen/activityPadding">

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_btn"
        android:layout_alignParentLeft="true"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_user_name_hint"
        android:layout_marginTop="40dp"
        android:id="@+id/nameEntry"
        android:layout_below="@+id/goBackButton"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_user_age_hint"
        android:layout_marginTop="20dp"
        android:id="@+id/ageEntry"
        android:layout_below="@+id/nameEntry"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_user_address_hint"
        android:layout_marginTop="20dp"
        android:id="@+id/addressEntry"
        android:layout_below="@+id/ageEntry"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_menu_password_hint"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:id="@+id/passwordEntry"
        android:layout_below="@+id/addressEntry"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_employee_btn"
        android:layout_below="@id/passwordEntry"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>