<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".employee_authenticate"
    android:padding="@dimen/activityPadding">

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_btn"
        android:layout_alignParentRight="true"
        />

    <EditText
        android:id="@+id/employeeIdEditTextEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/admin_promote_hint"
        android:layout_below="@+id/goBackButton"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:inputType="textVisiblePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/login_menu_password_hint"
        android:layout_below="@id/employeeIdEditTextEntry"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_authenticate_btn"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>