<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginMenu"
    android:padding="@dimen/activityPadding">

    <Spinner
        android:id="@+id/rolePositionEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:prompt="@string/login_role_name_prompt"
        android:entries="@array/role_arrays"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_menu_id_hint"
        android:layout_below="@id/rolePositionEntry"
        android:layout_marginTop="25dp"
        android:id="@+id/userIdEntry"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_menu_password_hint"
        android:inputType="textPassword"
        android:id="@+id/passwordEntry"
        android:layout_below="@+id/userIdEntry"
        android:layout_marginTop="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_menu_login_prompt"
        android:layout_below="@+id/passwordEntry"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>
</RelativeLayout>